--- a/assets/scss/components/careers/_jobs.scss
+++ b/assets/scss/components/careers/_jobs.scss
@@ -14,8 +14,6 @@
 		}
 	}
 
-	// Filters //
-
 	&-filter {
 		display: block;
 		user-select: none;
@@ -109,209 +107,33 @@
 			color: $color-light-greenish-blue;
 		}
 	}
-	// End Filters //
-}
 
-.Job {
-	margin-bottom: 0rem;
-	opacity: 0;
-	transform: translateY(140px);
-	transition: opacity .3s $ease-in-quart, transform 1s $ease-out-quart;
-	will-change: transform, opacity;
-
-	.active & {
-
-		@for $i from 0 through 20 {
-			&:nth-child(#{$i}){
-				@media (min-width: $screen-md-up) {
-					transition-delay: ($i * 120ms + $desktop-delay + 650ms);
-				}
-				@media (max-width: $screen-md) {
-					transition-delay: ($i * 120ms + 650ms);
-				}
-			}
-		}
-	}
-
-	.active &,
-	.complete & {
-		opacity: 1;
-		transform: translateY(0);
-	}
-
-
-	&-title {
-		cursor: pointer;
-	}
-
-	&-newLabel {
-		overflow: hidden;
-		display: flex;
-		width: 0;
-		transition: width 1s $ease-in-out-quint 2.5s;
-		will-change: width;
+	&-listItem {
+		margin-bottom: 0rem;
+		opacity: 0;
+		transform: translateY(140px);
+		transition: opacity .3s $ease-in-quart, transform 1s $ease-out-quart;
+		will-change: transform, opacity;
 
 		.active & {
-			width: 40px;
+
+			@for $i from 0 through 20 {
+				&:nth-child(#{$i}){
+					@media (min-width: $screen-md-up) {
+						transition-delay: ($i * 120ms + $desktop-delay + 650ms);
+					}
+					@media (max-width: $screen-md) {
+						transition-delay: ($i * 120ms + 650ms);
+					}
+				}
+			}
 		}
+
+		.active &,
 		.complete & {
-			width: 40px;
-		}
-	}
-	&-newLabelText {
-		background: $color-light-greenish-blue;
-		color: black;
-		font-size: 0.625rem;
-		padding: 1px 6px;
-		border-radius: 1px;
-	}
-
-	&-category {
-		color: $color-light-greenish-blue;
-	}
-
-	&-extract {
-		cursor: pointer;
-		display: inline-block !important;
-
-		&.v-enter-active, &.v-leave-active {
-			transition: transform 1s $ease-in-out-expo;
-			will-change: transform;
-			position: relative;
-
-			&:after {
-				content: "";
-				position: absolute;
-				top: 0;
-				display: block;
-				bottom: 0;
-				right: 0;
-				background: $color-charcoal;
-				z-index: 1;
-				width: 100%;
-				transform: scaleX(0);
-				transform-origin: right;
-				transition: transform 1s $ease-in-out-expo;
-			}
-		}
-
-		&.v-enter-active {
-			&, &:after{
-				transition-delay: .6s;
-			}
-		}
-
-		&.v-enter, &.v-leave-to {
-			&:after{
-				transform: scaleX(1);
-			}
-		}
-
-		&[style*="display"] {
-			opacity: 0;
-		}
-
-		&:hover {
-			color: $color-light-greenish-blue;
-		}
-	}
-
-	&-subhead {
-		overflow: hidden;
-		display: flex;
-		align-items: center;
-	}
-
-
-	&-link {
-		color: $color-light-greenish-blue;
-		border: 1px solid $color-light-greenish-blue;
-		font-size: 0.75rem;
-		font-weight: 300;
-		text-transform: uppercase;
-		padding: 12px 70px;
-		display: inline-block;
-		text-decoration: none;
-
-		&--desk {
-			@media (max-width: $screen-sm-down) {
-				display: none;
-			}
-		}
-
-		&--mobile {
-			@media (min-width: $screen-sm) {
-				display: none;
-			}
-		}
-
-		&:hover {
-			background: $color-light-greenish-blue;
-			color: $color-charcoal;
-		}
-
-		@media (max-width: $screen-xs) {
-			width: 100%;
-			text-align: center;
-		}
-	}
-
-	&-details {
-		transform: translateY(-40px);
-
-		@media (min-width: $screen-sm) {
-			display: flex;
-		}
-
-		&.v-enter-active,
-		&.v-leave-active {
-			transition: max-height .9s $ease-in-out-quart, transform .9s $ease-in-out-quart, opacity .6s $ease-in-out-quart;
-			will-change: max-height, transform, opacity;
-			max-height: 220vh;
 			opacity: 1;
-			overflow: hidden;
+			transform: translateY(0);
 		}
-
-		&.v-enter-active {
-			transition-delay: .9s, .9s, .9s;
-		}
-
-		&.v-enter,
-		&.v-leave-to {
-			max-height: 0px;
-			opacity: 0;
-			transform: translateY(40px);
-		}
-
-	}
-
-	&-side {
-		max-width: 320px;
-		flex: 1;
-		margin-right: 7.3vw;
-
-		@media (max-width: $screen-lg) {
-			max-width: 280px
-		}
-		@media (max-width: $screen-sm) {
-			max-width: 240px;
-			margin-right: 6vw;
-		}
-		@media (max-width: $screen-sm-down) {
-			max-width: none;
-			margin-bottom: 1.875rem;
-		}
-	}
-
-	&-sideTitle {
-		color: white;
-		opacity: .3;
-		display: block;
-		text-transform: uppercase;
-	}
-
-	&-main {
-		flex: 1;
 	}
 
 }
