--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -24,13 +24,14 @@
 @import 'components/home/sustainability';
 @import 'components/home/comfort';
 @import 'components/team/about';
-@import 'components/team/employees';
+@import 'components/team/members';
 @import 'components/team/hiring';
 @import 'components/careers/hero';
 @import 'components/careers/covid-banner';
 @import 'components/careers/hq';
 @import 'components/careers/meet';
 @import 'components/careers/jobs';
+@import 'components/careers/job';
 @import 'components/careers/process';
 @import 'components/careers/job-cta';
 
