[SCSS] Add more utilities

--- a/assets/scss/utilities/_texts.scss
+++ b/assets/scss/utilities/_texts.scss
@@ -9,3 +9,15 @@
 .u-textCapitalize:first-letter {
 	text-transform: uppercase;
 }
+
+.u-textItalic {
+	font-style: italic;
+}
+
+.u-textCurrentColor {
+	color: currentColor !important;
+}
+
+.u-textUnderlined {
+	text-decoration: underline;
+}
