add le whole rounting system and the project's detailed page

--- a/assets/scss/pages/_projects.scss
+++ b/assets/scss/pages/_projects.scss
@@ -8,6 +8,10 @@
 	main{
 		margin: 15vh 10vw 0vh 10vw;
 		height: 85vh;
+
+		font-family: 'Riposte';
+		font-size: 6.25rem;
+		font-weight: 200;
 	}
 
 }
