--- a/assets/scss/pages/_projects.scss
+++ b/assets/scss/pages/_projects.scss
@@ -2,10 +2,115 @@
 	background: $color-charcoal;
 	color: white;
 	min-height: 100vh;
+	overflow-y: hidden;
 	display: flex;
 	flex-direction: column;
 
 	main{
+		.filters{
+			display: flex;
+			flex-direction: column;
+		
+			.settings-icon{
+				cursor: pointer;
+				display: flex;
+				justify-content: center;
+				align-items: center;
+				height: 60px;
+				width: 60px;
+				border-radius: 15px;
+				background-color: #1B1B1B; 
+				margin: 10px 0;
+				transition: 0.4s;
+				svg{
+					transition: 0.4s;
+					opacity: .2;
+				}
+
+				&:hover{
+					background-color: #272627;
+				}
+				
+				&.active{
+					
+					svg{
+						opacity: 1;
+					}
+				}
+			}
+
+			.settings{
+				display: flex;
+				justify-content: left;
+				flex-direction: column;
+				transition: 0.4s;
+				.type-project{
+					display: flex;
+					width: 100%;
+					input{
+						position: absolute;
+						opacity: 0;
+						cursor: pointer;
+						height: 0;
+						width: 0;
+					}
+					label{
+						transition: 0.4s;
+						cursor: pointer;
+						margin: 5px 0;
+						background-color: #1B1B1B;
+						height: 80px;
+						width: 450px;
+						display: flex;
+						border-radius: 15px;
+						align-items: center;
+						.type-icon{
+							transition: 0.4s;
+							width: 20%;
+							display: flex;
+							align-items: center;
+							justify-content: center;
+							opacity: .2;
+						}
+						.type-name{
+							transition: 0.4s;
+							font-size: 18px;
+							text-transform: uppercase;
+							width: 80%;
+							display: flex;
+							align-items: center;
+							justify-content: center;
+							opacity: .2;
+							letter-spacing: 0px;
+							font-weight: 200;
+						}
+
+						&:hover{
+							background-color: #272627;
+						}
+					}
+
+					input:checked+label{
+						.type-icon{
+							opacity: 1;
+						}
+						.type-name{
+							opacity: 1;
+						}
+					}
+				}
+
+				.check{
+
+					svg{
+						opacity: .2;
+						g{
+							stroke: white;
+						}
+					}
+				}
+			}
+		}
 		margin: 15vh 10vw 0vh 10vw;
 		height: 85vh;
 
@@ -20,15 +125,24 @@
 			letter-spacing: 0px;
 		}
 
-		.link{
-			letter-spacing: -3px;
-			color: white;
+		.project{
 
+			opacity: .2;
+			transition: 0.2s;
+			.link{
+				letter-spacing: -3px;
+				color: white;
+	
+			}
+			&.active{
+				
+				opacity: 1;
+			}
+			&:hover{
+				opacity: 1;
+			}
 		}
 		
-		.locked{
-			opacity: 0.2;
-		}
 	}
 
 }
