whole design is done

--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -33,6 +33,8 @@
 @import 'components/careers/jobs';
 @import 'components/careers/process';
 @import 'components/careers/job-cta';
+@import 'components/projects/hero';
+@import 'components/projects/carousel';
 
 @import 'layouts/home-layout';
 @import 'layouts/header';
