--- a/assets/scss/pages/_projects.scss
+++ b/assets/scss/pages/_projects.scss
@@ -8,6 +8,7 @@
 
 	main{
 		.filters{
+			margin-bottom: 5%;
 			display: flex;
 			flex-direction: column;
 		
@@ -66,20 +67,24 @@
 						align-items: center;
 						.type-icon{
 							transition: 0.4s;
-							width: 20%;
+							width: 40%;
 							display: flex;
 							align-items: center;
-							justify-content: center;
+							justify-content: left;
+							padding-left: 5%;
 							opacity: .2;
+							img{
+								height: 40px;
+							}
 						}
 						.type-name{
 							transition: 0.4s;
 							font-size: 18px;
 							text-transform: uppercase;
-							width: 80%;
+							width: 70%;
 							display: flex;
 							align-items: center;
-							justify-content: center;
+							justify-content: left;
 							opacity: .2;
 							letter-spacing: 0px;
 							font-weight: 200;
@@ -108,6 +113,16 @@
 							stroke: white;
 						}
 					}
+
+					&.active{
+						
+						svg{
+							opacity: 1;
+							g{
+								stroke: #1EFD8D;
+							}
+						}
+					}
 				}
 			}
 		}
@@ -123,6 +138,8 @@
 			text-transform: capitalize;
 			font-weight: 200;
 			letter-spacing: 0px;
+			margin-left: 8px;
+			cursor: pointer;
 		}
 
 		.project{
@@ -132,6 +149,7 @@
 			.link{
 				letter-spacing: -3px;
 				color: white;
+				cursor: pointer;
 	
 			}
 			&.active{
