--- a/assets/scss/pages/_projects.scss
+++ b/assets/scss/pages/_projects.scss
@@ -1,10 +1,10 @@
 .Projects {
-	background: $color-charcoal;
+	background: #111111;
 	color: white;
 	min-height: 100vh;
-	overflow-y: hidden;
 	display: flex;
 	flex-direction: column;
+	height: 100%;
 
 	@media screen and (max-width: 640px) {
 		main{
@@ -17,6 +17,7 @@
 	}
 
 	main{
+		height: 100% !important;
 		.filters{
 			margin-bottom: 5%;
 			display: flex;
@@ -27,8 +28,8 @@
 				display: flex;
 				justify-content: center;
 				align-items: center;
-				height: 60px;
-				width: 60px;
+				height: 50px;
+				width: 50px;
 				border-radius: 15px;
 				background-color: #1B1B1B; 
 				margin: 10px 0;
@@ -70,10 +71,10 @@
 						cursor: pointer;
 						margin: 5px 0;
 						background-color: #1B1B1B;
-						height: 80px;
-						width: 450px;
+						height: 60px;
+						width: 315px;
 						display: flex;
-						border-radius: 15px;
+						border-radius: 5px;
 						align-items: center;
 						.type-icon{
 							transition: 0.4s;
@@ -81,15 +82,15 @@
 							display: flex;
 							align-items: center;
 							justify-content: left;
-							padding-left: 5%;
+							padding-left: 16px;
 							opacity: .2;
 							img{
-								height: 40px;
+								height: 50px;
 							}
 						}
 						.type-name{
 							transition: 0.4s;
-							font-size: 18px;
+							font-size: 12px;
 							text-transform: uppercase;
 							width: 70%;
 							display: flex;
@@ -137,30 +138,65 @@
 			}
 		}
 		margin: 15vh 10vw 0vh 10vw;
-		height: 85vh;
 
 		font-family: 'Riposte';
 		font-size: 100px;
 		font-weight: 200;
 
-		.type{
-			font-size: 12px;
-			text-transform: capitalize;
-			font-weight: 200;
-			letter-spacing: 0px;
-			margin-left: 8px;
-			cursor: pointer;
-		}
 
 		.project{
-
+			@media screen and (max-width: 900px) {
+				display: flex;
+				flex-direction: column;
+			}
 			opacity: .2;
 			transition: 0.2s;
+			margin: 10px 0;
+
+			.tags{
+				display: flex;
+				align-items: center;
+			}
+
+			.type{
+				font-size: 12px;
+				text-transform: uppercase;
+				font-weight: 200;
+				letter-spacing: 0px;
+				margin-left: 8px;
+				cursor: pointer;
+				transform: translateY(10px);
+				@media screen and (max-width: 900px) {
+					transform: translateY(0px);
+				}
+			}
+			.soon{
+				font-size: 12px;
+				text-transform: uppercase;
+				font-weight: 200;
+				letter-spacing: 0px;
+				margin-left: 8px;
+				cursor: pointer;
+				padding: 5px 10px;
+				background: #414141;
+				border-radius: 15px;
+				color: white;
+				@media screen and (max-width: 900px) {
+					transform: translateY(0px);
+				}
+			}
+
 			.link{
 				letter-spacing: -3px;
 				color: white;
 				cursor: pointer;
-	
+				
+				@media screen and (max-width: 900px) {
+					font-size: 70px;
+				}
+				@media screen and (max-width: 640px) {
+					font-size: 50px;
+				}
 			}
 			&.active{
 				
@@ -168,6 +204,14 @@
 			}
 			&:hover{
 				opacity: 1;
+			}
+
+			&.locked{
+				cursor: default;
+				&:hover{
+					cursor: default;
+					opacity: .2;
+				}
 			}
 		}
 		
