--- a/assets/scss/pages/_projects.scss
+++ b/assets/scss/pages/_projects.scss
@@ -56,6 +56,7 @@
 				justify-content: left;
 				flex-direction: column;
 				transition: 0.4s;
+				margin-bottom: 80px;
 				.type-project{
 					display: flex;
 					width: 100%;
