--- a/assets/scss/layouts/_header.scss
+++ b/assets/scss/layouts/_header.scss
@@ -91,7 +91,7 @@
 		position: absolute;
 		top: 35px;
 		opacity: 0;
-		transition: opacity .1s linear .5s;
+		transition: opacity .1s;
 		will-change: opacity;
 		width: 22px;
 		height: 31px;
