--- a/assets/scss/pages/_projects.scss
+++ b/assets/scss/pages/_projects.scss
@@ -70,7 +70,7 @@
 					label{
 						transition: 0.4s;
 						cursor: pointer;
-						margin: 5px 0;
+						margin: 5px 0 0 0;
 						background-color: #1B1B1B;
 						height: 60px;
 						width: 315px;
@@ -79,7 +79,7 @@
 						align-items: center;
 						.type-icon{
 							transition: 0.4s;
-							width: 40%;
+							width: 150px;
 							display: flex;
 							align-items: center;
 							justify-content: left;
@@ -93,7 +93,6 @@
 							transition: 0.4s;
 							font-size: 12px;
 							text-transform: uppercase;
-							width: 70%;
 							display: flex;
 							align-items: center;
 							justify-content: left;
@@ -171,21 +170,6 @@
 					transform: translateY(0px);
 				}
 			}
-			.soon{
-				font-size: 12px;
-				text-transform: uppercase;
-				font-weight: 200;
-				letter-spacing: 0px;
-				margin-left: 8px;
-				cursor: pointer;
-				padding: 5px 10px;
-				background: #414141;
-				border-radius: 15px;
-				color: white;
-				@media screen and (max-width: 900px) {
-					transform: translateY(0px);
-				}
-			}
 
 			.link{
 				letter-spacing: -3px;
@@ -209,9 +193,20 @@
 
 			&.locked{
 				cursor: default;
+				opacity: 0.1;
+				.link{
+					&:hover{
+						cursor: default;
+					}
+				}
+				.type{
+					&:hover{
+						cursor: default;
+					}
+				}
 				&:hover{
 					cursor: default;
-					opacity: .2;
+					opacity: .1;
 				}
 			}
 		}
